<resources>
    <string name="app_name">食品出货系统</string>
    <!--登录 -->
    <string name="action_settings">Settings</string>
    <string name="login_id">用户ID</string>
    <string name="login_password">密码</string>
    <string name="login_remember">记住我</string>
    <string name="login_gaoji">高级</string>
    <string name="login_url">服务器地址</string>
    <string name="login_loginbutton">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--主界面-->
    <string name="main_goods">货品管理</string>
    <string name="main_orders">订单管理</string>
    <string name="main_customers">客户管理</string>
    <string name="search">搜索</string>
    <!--货品详情-->
    <string name="goodsdetailed_title">食品详情</string>
    <string name="addgoods_title">添加食品</string>
    <string name="goods_id">编号:</string>
    <string name="goods_name">名称:</string>
    <string name="goods_reserve">库存:</string>
    <string name="goods_price">单价:</string>
    <string name="gooods_date">日期:</string>
    <string name="goods_category">所属种类:</string>
    <string name="goodsdetailed_delete">删除</string>
    <string name="goodsdetailed_sure">确认</string>
    <string name="sureaddgood">添加</string>
    <string name="goodsdetailed_change">修改</string>
    <string name="goodsdetailed_back">返回</string>
    <string name="category_detailed">请选择种类</string>
    <string-array name="category">
        <item>肉类</item>
        <item>蔬菜类</item>
        <item>主食</item>
        <item>其它</item>
    </string-array>

    <!--刷新布局-->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!--订单详情与订单列表-->
    <string name="orderId">订单号:</string>
    <string name="customer">下单客户:</string>
    <string name="totalPrice">总金额:</string>
    <string name="userId">操作员:</string>
    <string name="address">地址:</string>
    <string name="shopcar_jian">—</string>
    <string name="shopcar_jia">+</string>

</resources>
