<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_addgoods"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haishan.saleoa.GoodsSubFragment.AddgoodsActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goodsDetailedtitle"
        android:textSize="35dp"
        android:text="@string/addgoods_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="20dp"
            android:layout_margin="15dp"
            android:text="@string/goods_name"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_detailed"
            android:textSize="20dp"
            android:ems="10"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reserve"
            android:textSize="20dp"
            android:layout_margin="15dp"
            android:text="@string/goods_reserve"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reserve_detailed"
            android:textSize="20dp"
            android:ems="10"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:textSize="20dp"
            android:layout_margin="15dp"
            android:text="@string/goods_price"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_detailed"
            android:textSize="20dp"
            android:ems="10"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:textSize="20dp"
            android:layout_margin="15dp"
            android:text="@string/goods_category"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_detailed"
            android:textSize="20dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:id="@+id/goodsDetailed_sure"
            android:text="@string/goodsdetailed_sure"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:id="@+id/goodsDetailed_back"
            android:text="@string/goodsdetailed_back"
            android:layout_margin="15dp" />
    </LinearLayout>

</LinearLayout>
