<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.haishan.saleoa.loginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:background="@drawable/background_login_div">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="25dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/login_id"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:hint="@string/login_password"
                android:password="true"
                android:singleLine="true"
                android:layout_below="@+id/username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gaoji_login"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/login_gaoji"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="120dp"
                android:id="@+id/check_login"
                android:text="@string/login_remember"/>
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/url_login"
            android:ems="13"
            android:hint="@string/login_url"
            android:background="@drawable/background_et_div"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_loginbutton"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_button_div"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_1"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"></LinearLayout>
</RelativeLayout>
