<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.haishan.saleoa.OrdersSubFragment.OrderDetailedActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/orders_detailed_list"
        ></ListView>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_Id"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/orderId"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderId"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kehu"
            android:layout_marginLeft="30dp"
            android:textSize="15dp"
            android:text="@string/customer"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customer"
            android:textSize="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customer_adrress"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adrress"
            android:textSize="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:textSize="15dp"
                android:text="电话:"
                android:id="@+id/kehuphone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/phone"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/boda"
                android:text="拨打"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/riqi"
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/gooods_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orderDate"
                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_Price"
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/totalPrice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalPrice"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:id="@+id/ordersDetailed_delete"
            android:text="@string/goodsdetailed_delete"
            android:layout_margin="15dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:id="@+id/ordersDetailed_back"
            android:text="@string/goodsdetailed_back"
            android:layout_margin="15dp" />
    </LinearLayout>


</LinearLayout>
