<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="80dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_item"
        android:textSize="25sp"
        android:textColor="@color/colorAccent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1_item"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text3_item"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="斤"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_2_item"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text4_item"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:text="元/斤"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shopcar_delete"
            android:text="@string/goodsdetailed_delete"
            android:background="#ffffff"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="100dp">
        <Button
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:id="@+id/shopcar_jian"
            android:text="@string/shopcar_jian"
            android:background="#ffffff"
            />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/shopcar_number"
                />
            <Button
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:id="@+id/shopcar_jia"
                android:text="@string/shopcar_jia"
                android:background="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>